//! End-to-End Test Suite for Police Thief Game Server
//! 
//! This test suite validates the complete flow from client connection
//! through authentication, game room creation, gameplay, and disconnection.

use anyhow::Result;
use std::time::Duration;
use tokio::time::timeout;

#[cfg(test)]
mod e2e_tests {
    use super::*;
    
    /// Test complete user journey from login to logout
    #[tokio::test]
    #[ignore] // Run with: cargo test --ignored e2e_full_user_journey
    async fn test_e2e_full_user_journey() -> Result<()> {
        // 1. Start servers
        start_test_servers().await?;
        
        // 2. User registration
        let user_id = register_user("testuser", "TestPass123!").await?;
        
        // 3. User login
        let auth_token = login_user("testuser", "TestPass123!").await?;
        
        // 4. Create game room
        let room_id = create_room(&auth_token, "Test Room").await?;
        
        // 5. Join room
        join_room(&auth_token, room_id).await?;
        
        // 6. Start game
        start_game(&auth_token, room_id).await?;
        
        // 7. Send game messages
        send_game_message(&auth_token, room_id, "move", "{\"x\": 10, \"y\": 20}").await?;
        
        // 8. Leave room
        leave_room(&auth_token, room_id).await?;
        
        // 9. Logout
        logout_user(&auth_token).await?;
        
        // 10. Cleanup
        stop_test_servers().await?;
        
        Ok(())
    }
    
    /// Test concurrent connections stress test
    #[tokio::test]
    #[ignore] // Run with: cargo test --ignored e2e_concurrent_connections
    async fn test_e2e_concurrent_connections() -> Result<()> {
        start_test_servers().await?;
        
        let mut handles = vec![];
        
        // Create 100 concurrent connections
        for i in 0..100 {
            let handle = tokio::spawn(async move {
                let username = format!("user{}", i);
                let password = "TestPass123!";
                
                // Register and login
                if let Ok(_) = register_user(&username, password).await {
                    if let Ok(token) = login_user(&username, password).await {
                        // Create and join room
                        if let Ok(room_id) = create_room(&token, &format!("Room {}", i)).await {
                            let _ = join_room(&token, room_id).await;
                            
                            // Simulate gameplay
                            tokio::time::sleep(Duration::from_secs(2)).await;
                            
                            let _ = leave_room(&token, room_id).await;
                            let _ = logout_user(&token).await;
                        }
                    }
                }
            });
            handles.push(handle);
        }
        
        // Wait for all connections to complete
        for handle in handles {
            let _ = handle.await;
        }
        
        stop_test_servers().await?;
        Ok(())
    }
    
    /// Test authentication flow with JWT
    #[tokio::test]
    #[ignore]
    async fn test_e2e_authentication_flow() -> Result<()> {
        start_test_servers().await?;
        
        // Test normal login
        let token = login_user("admin", "admin").await?;
        assert!(!token.is_empty());
        
        // Test invalid credentials
        let invalid_result = login_user("admin", "wrong").await;
        assert!(invalid_result.is_err());
        
        // Test token refresh
        let new_token = refresh_token(&token).await?;
        assert!(!new_token.is_empty());
        
        // Test protected endpoint with valid token
        let profile = get_user_profile(&token).await?;
        assert_eq!(profile.username, "admin");
        
        // Test protected endpoint with invalid token
        let invalid_token = "invalid.jwt.token";
        let invalid_profile = get_user_profile(invalid_token).await;
        assert!(invalid_profile.is_err());
        
        stop_test_servers().await?;
        Ok(())
    }
    
    /// Test game room operations
    #[tokio::test]
    #[ignore]
    async fn test_e2e_room_operations() -> Result<()> {
        start_test_servers().await?;
        
        let token1 = login_user("user1", "password").await?;
        let token2 = login_user("user2", "password").await?;
        
        // Create room
        let room_id = create_room(&token1, "Game Room 1").await?;
        
        // List rooms
        let rooms = list_rooms(&token1).await?;
        assert!(rooms.iter().any(|r| r.id == room_id));
        
        // Join room with second user
        join_room(&token2, room_id).await?;
        
        // Get room info
        let room_info = get_room_info(&token1, room_id).await?;
        assert_eq!(room_info.player_count, 2);
        
        // Start game (requires minimum players)
        start_game(&token1, room_id).await?;
        
        // Send chat message
        send_chat_message(&token1, room_id, "Hello!").await?;
        
        // Leave room
        leave_room(&token2, room_id).await?;
        leave_room(&token1, room_id).await?;
        
        stop_test_servers().await?;
        Ok(())
    }
    
    /// Test reconnection handling
    #[tokio::test]
    #[ignore]
    async fn test_e2e_reconnection() -> Result<()> {
        start_test_servers().await?;
        
        let token = login_user("testuser", "password").await?;
        let room_id = create_room(&token, "Reconnect Test").await?;
        
        // Simulate disconnection
        simulate_network_disruption().await?;
        
        // Attempt reconnection
        let reconnected = reconnect_with_token(&token).await?;
        assert!(reconnected);
        
        // Verify room state is preserved
        let room_info = get_room_info(&token, room_id).await?;
        assert_eq!(room_info.name, "Reconnect Test");
        
        stop_test_servers().await?;
        Ok(())
    }
    
    // Helper functions
    
    async fn start_test_servers() -> Result<()> {
        // Start Redis
        std::process::Command::new("redis-server")
            .arg("--daemonize")
            .arg("yes")
            .output()?;
        
        // Start game servers in test mode
        // This would typically start your servers with test configuration
        tokio::time::sleep(Duration::from_secs(2)).await;
        Ok(())
    }
    
    async fn stop_test_servers() -> Result<()> {
        // Stop Redis
        std::process::Command::new("redis-cli")
            .arg("shutdown")
            .output()?;
        Ok(())
    }
    
    async fn register_user(username: &str, password: &str) -> Result<String> {
        // Implementation would make HTTP request to registration endpoint
        Ok(format!("user_{}", username))
    }
    
    async fn login_user(username: &str, password: &str) -> Result<String> {
        // Implementation would make HTTP request to login endpoint
        Ok(format!("token_{}", username))
    }
    
    async fn logout_user(token: &str) -> Result<()> {
        // Implementation would make HTTP request to logout endpoint
        Ok(())
    }
    
    async fn refresh_token(token: &str) -> Result<String> {
        // Implementation would make HTTP request to refresh endpoint
        Ok(format!("{}_refreshed", token))
    }
    
    async fn get_user_profile(token: &str) -> Result<UserProfile> {
        // Implementation would make HTTP request to profile endpoint
        Ok(UserProfile {
            username: "admin".to_string(),
            level: 1,
        })
    }
    
    async fn create_room(token: &str, name: &str) -> Result<i32> {
        // Implementation would make gRPC or HTTP request
        Ok(1)
    }
    
    async fn join_room(token: &str, room_id: i32) -> Result<()> {
        // Implementation would make gRPC or HTTP request
        Ok(())
    }
    
    async fn leave_room(token: &str, room_id: i32) -> Result<()> {
        // Implementation would make gRPC or HTTP request
        Ok(())
    }
    
    async fn start_game(token: &str, room_id: i32) -> Result<()> {
        // Implementation would make gRPC or HTTP request
        Ok(())
    }
    
    async fn send_game_message(token: &str, room_id: i32, msg_type: &str, data: &str) -> Result<()> {
        // Implementation would send TCP/QUIC message
        Ok(())
    }
    
    async fn send_chat_message(token: &str, room_id: i32, message: &str) -> Result<()> {
        // Implementation would send chat message
        Ok(())
    }
    
    async fn list_rooms(token: &str) -> Result<Vec<RoomInfo>> {
        // Implementation would make gRPC request
        Ok(vec![])
    }
    
    async fn get_room_info(token: &str, room_id: i32) -> Result<RoomInfo> {
        // Implementation would make gRPC request
        Ok(RoomInfo {
            id: room_id,
            name: "Test Room".to_string(),
            player_count: 1,
        })
    }
    
    async fn simulate_network_disruption() -> Result<()> {
        // Simulate network issues
        tokio::time::sleep(Duration::from_millis(500)).await;
        Ok(())
    }
    
    async fn reconnect_with_token(token: &str) -> Result<bool> {
        // Attempt reconnection with existing token
        Ok(true)
    }
    
    #[derive(Debug)]
    struct UserProfile {
        username: String,
        level: i32,
    }
    
    #[derive(Debug)]
    struct RoomInfo {
        id: i32,
        name: String,
        player_count: i32,
    }
}

/// Performance benchmark tests
#[cfg(test)]
mod performance_tests {
    use super::*;
    use std::time::Instant;
    
    #[tokio::test]
    #[ignore]
    async fn test_message_throughput() -> Result<()> {
        let start = Instant::now();
        let mut message_count = 0;
        
        // Send messages for 10 seconds
        while start.elapsed() < Duration::from_secs(10) {
            // Send test message
            send_test_message().await?;
            message_count += 1;
        }
        
        let throughput = message_count as f64 / 10.0;
        println!("Message throughput: {:.2} msg/sec", throughput);
        
        // Assert minimum throughput (12,000 msg/sec for TCP)
        assert!(throughput >= 12000.0, "Throughput below minimum requirement");
        
        Ok(())
    }
    
    #[tokio::test]
    #[ignore]
    async fn test_connection_latency() -> Result<()> {
        let mut latencies = vec![];
        
        for _ in 0..100 {
            let start = Instant::now();
            establish_connection().await?;
            let latency = start.elapsed();
            latencies.push(latency);
        }
        
        // Calculate p99 latency
        latencies.sort();
        let p99_index = (latencies.len() as f64 * 0.99) as usize;
        let p99_latency = latencies[p99_index];
        
        println!("P99 connection latency: {:?}", p99_latency);
        
        // Assert p99 latency < 2ms
        assert!(p99_latency < Duration::from_millis(2));
        
        Ok(())
    }
    
    async fn send_test_message() -> Result<()> {
        // Implementation would send actual message
        Ok(())
    }
    
    async fn establish_connection() -> Result<()> {
        // Implementation would establish actual connection
        Ok(())
    }
}